--- a/app/src/main/res/layout/activity_repartidor_restaurante.xml
+++ b/app/src/main/res/layout/activity_repartidor_restaurante.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E0E0E0"
-    android:id="@+id/main">>
+    android:id="@+id/main">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
