--- a/app/src/main/res/layout/activity_cliente_restaurante.xml
+++ b/app/src/main/res/layout/activity_cliente_restaurante.xml
@@ -89,7 +89,7 @@
 
         <!-- Descipción del restaurante -->
         <TextView
-            android:id="@+id/tvDescipcionRest"
+            android:id="@+id/tvDescripcionRest"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
