--- a/app/src/main/res/layout/activity_superadmin_main.xml
+++ b/app/src/main/res/layout/activity_superadmin_main.xml
@@ -146,7 +146,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:scaleType="fitXY"
-                    android:src="@drawable/sales_graph" />
+                    android:src="@drawable/ic_profile" />
             </LinearLayout>
 
             <LinearLayout
