--- a/app/src/main/res/layout/activity_admin_res_carta.xml
+++ b/app/src/main/res/layout/activity_admin_res_carta.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.adminRes.CartaAdminResActivity">
+    tools:context=".activity.adminRes.AdminResCartaActivity">
 
     <!-- Header con logo y opciones -->
     <LinearLayout
