--- a/app/src/main/res/layout/activity_admin_res_home.xml
+++ b/app/src/main/res/layout/activity_admin_res_home.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.adminRes.HomeAdminResActivity">
+    tools:context=".activity.adminRes.AdminResHomeActivity">
 
     <!-- Header con logo y opciones -->
     <LinearLayout
