--- a/app/src/main/res/layout/item_pedido.xml
+++ b/app/src/main/res/layout/item_pedido.xml
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:textSize="12sp"
             android:textColor="#888888"
-            android:drawableStart="@drawable/baseline_location_on_24"
+            android:drawableStart="@drawable/ic_location"
             android:drawablePadding="4dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,7 @@
             android:id="@+id/ivDelivery"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/baseline_delivery_dining_24"
+            android:src="@drawable/ic_delivery_dining"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvAddress"
             android:layout_marginTop="8dp"/>
