--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.Foodisea" parent="Theme.Material3.DayNight.NoActionBar">
+    <!-- Base application light theme. -->
+    <style name="Base.Theme.Foodisea" parent="Theme.Material3.Light.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:forceDarkAllowed">false</item>
     </style>
 
     <style name="Theme.Foodisea" parent="Base.Theme.Foodisea" />
